--- a/kmaps-app/src/legacy/searchui.css
+++ b/kmaps-app/src/legacy/searchui.css
@@ -462,7 +462,7 @@
     padding: 0.8rem 0.8rem 0.3rem;
     font-size: 1.25rem;
     color: #000;
-    margin: 1.5rem 0.5rem 0;
+    margin: 1.7rem 0.5rem 0;
 }
 .sui-advEditBut {
     display: inline-block;
