--- a/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
+++ b/kmaps-app/src/main/MainSearchToggle/MainSearchToggle.scss
@@ -6,7 +6,7 @@
 }
 .c-MainSearchToggle--group label {
     color: #fff;
-    background-color: #999;
+    background-color: #888;
     padding: 1rem 0;
     border-radius: 0;
     border: none;
