--- a/kmaps-app/src/views/Images/images.scss
+++ b/kmaps-app/src/views/Images/images.scss
@@ -8,7 +8,7 @@
     padding-left: 0;
     padding-right: 0;
     border-top: 0.3rem solid #b49c59;
-    max-width: 83vw;
+    max-width: 78vw;
 }
 .c-image {
     //  background-color: #fafafa;
