--- a/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
+++ b/kmaps-app/src/views/Kmaps/RelatedViewer/RelatedsViewer.scss
@@ -38,7 +38,7 @@
 
 @media (min-width: 992px) {
     .l-column__related {
-        margin-left: -1rem;
+        margin-left: 0m;
     }
 }
 
